[package]
name = "weather-ark"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "weather-ark"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasi-http-client = "0.2"
urlencoding = "2.1"

[profile.release]
opt-level = "z"
lto = true
strip = true
